src/test/fail/show_no_value.ly
<@lily    function f() {  } show f()    @>